--- a/configs/base_config.yaml
+++ b/configs/base_config.yaml
@@ -6,10 +6,11 @@ dataset:
       patient_id_csv_path: /home/taejoon/HDD_18TB_2/KBH/2024/risk-predictor/datasets/visual_datasets/patient-id_label_fold_1_train.csv
       video_csv_path: /home/taejoon/HDD_18TB_2/KBH/2024/risk-predictor/datasets/visual_datasets/video_path_fold_1_train.csv
     valid:
-      patient_id_csv_path: /home/taejoon/HDD_18TB_2/KBH/2024/risk-predictor/datasets/visual_datasets/patient-id_label_fold_1_train.csv
+      patient_id_csv_path: /home/taejoon/HDD_18TB_2/KBH/2024/risk-predictor/datasets/visual_datasets/patient-id_label_fold_1_test.csv
       video_csv_path: /home/taejoon/HDD_18TB_2/KBH/2024/risk-predictor/datasets/visual_datasets/video_path_fold_1_test.csv
 
 dataloader:
+  num_workers: 4
   visual:
     batch_size: 1
 
@@ -17,10 +18,8 @@ trainer:
   total_epochs: 5
   epoch_resume: 0 # 이어서 학습하고 싶다면 변경
   lr: 0.001
+  seed: 42
 
 visual_encoder:
-  input_size: 224
-  num_frames: 10
-  feature_dim: 128
-  hidden_dim: 256 # lstm의 은닉 차원
-  output_dim: 128 # lstm의 출력 차원
+  model_name_or_path: r3d_18
+  num_classes: 2
